examples/c/error-codes/violates-constraint/nonfatal/CV-CEA8-bad-static.output
CV-CEA8-bad-static.c:6:4: warning: arithmetic on a pointer to void is a GNU extension [-Wpointer-arith]
  y--;
  ~^
1 warning generated.
CV-CEA8-bad-static.c:6:4: error: Computing pointer minus integer of a pointer not to a complete object type.

    Constraint violation (CV-CEA8):
        see C11 section 6.5.6:3 http://rvdoc.org/C11/6.5.6
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

